@@ -6,6 +6,7 @@ Issue #2321 Add language to Start-BcContainerAppDataUpgrade
 Issue #2320 Better error message in Publish-PerTenantExtensionApps
 Issue #2325 Support for resourceExposurePolicy in Extract-AppFileToFolder
 Issue #2286 Publish-NavContainerApp -upgrade -install fails if app was not installed before
+Issue #2342 Publish-NavContainerApp and Replace-DependenciesInAppFile doesn't support ResourceExposurePolicy
 
 3.0.2
 Issue #2280 TypeNotFound on [Path]::GetFileName($vsixUrl)
